# xbmc-pvr-addons

./: configure.ac
addons/: Makefile.am
addons/pvr.sledovanitv/: Makefile.am
addons/pvr.sledovanitv/addon/: addon.xml.in
addons/pvr.sledovanitv/addon/resources/: settings.xml
addons/pvr.sledovanitv/addon/resources/language/Czech/: strings.po
addons/pvr.sledovanitv/addon/resources/language/English/: strings.po
addons/pvr.sledovanitv/addon/resources/skins/skin.confluence/720p/: DialogLogin.xml
addons/pvr.sledovanitv/project/VS2010Express/: pvrclient_sledovanitv.vcxproj  pvrclient_sledovanitv.vcxproj.filters
addons/pvr.sledovanitv/src/: DialogLogin.cpp  DialogLogin.h  DialogOK.cpp  DialogOK.h  PVRData.cpp  PVRData.h  client.cpp  client.h  uri.h  utils.cpp  utils.h
project/VS2010Express/: xbmc-pvr-addons.sln
xbmc/: libXBMC_addon.h  libXBMC_gui.h
